# hermes-jiuwenmemory-plugin

./: .gitignore  LICENSE  README.md  SERVER_POC.md  SKILLS.md  __init__.py  install.sh  plugin.yaml  pyproject.toml
.github/workflows/: tests.yml
scripts/: benchmark_jiuwenmemory_tokens.py  jiuwenmemory_server_audit.py  sync_hermes_skills.py
skills/: MANIFEST.json
skills/autonomous-ai-agents/codex-wsl-interop/: SKILL.md
skills/autonomous-ai-agents/hermes-dashboard-ui-maintenance/: SKILL.md
skills/autonomous-ai-agents/hermes-dashboard-ui-maintenance/references/: chat-session-history-refresh.md  (+1 more)
skills/autonomous-ai-agents/hermes-gateway-operations/: SKILL.md
skills/autonomous-ai-agents/hermes-gateway-setup/: SKILL.md
skills/autonomous-ai-agents/hermes-model-switching/: SKILL.md
skills/autonomous-ai-agents/hermes-plugin-operations/: SKILL.md
skills/autonomous-ai-agents/hermes-skill-installation/: SKILL.md
skills/autonomous-ai-agents/hermes-skill-operations/: SKILL.md
skills/mlops/reproducible-local-ai-deployment/: SKILL.md
skills/productivity/awesun-remote-control/: SKILL.md  executor.py  mcp-config.json
skills/productivity/project-continuity-handoff/: SKILL.md
skills/skill-factory/skill-omni-creation/: SKILL.md
skills/software-development/desktop-app-codebase-analysis/: SKILL.md
skills/software-development/legacy-desktop-application-modernization/: SKILL.md
skills/software-development/opoerss-winforms-ui-maintenance/: SKILL.md
tests/: test_jiuwenmemory_plugin.py  test_jiuwenmemory_server_audit.py  test_standalone_discovery.py
(+29 files in other folders)
